--- a/testprofileLG.github.io/index.html
+++ b/testprofileLG.github.io/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>My Portfolio</title>
+		<title>My Data Science Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,15 +19,15 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">My Portofolio</a></h1>
-							<p>Statistics and Data Science enthusiast: teacher and researcher in education, focusing on bridging the gap between academia and industry.</p>
+							<h1 id="logo"><a href="index.html">My Data Science Portfolio</a></h1>
+							<p>Statistics and Data Science student: student who is learning how to code and have completed a couple of projects.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid fa-home" href="CV Layla Guyot.pdf"><span>My Resume</span></a></li>
-									<li><a class="icon fa-chart-bar" href="Project1.html"><span>Wrangling and Visualizations</span></a></li>
-									<li><a class="icon solid fa-sitemap" href="Project2.html"><span>Classification and Prediction</span></a></li>
+									<li><a class="icon solid fa-home" href="Kaitlyn_Rouse_Resume_1.pdf"><span>My Resume</span></a></li>
+									<li><a class="icon fa-chart-bar" href="Project_1.pdf"><span>Wrangling and Visualizations</span></a></li>
+									<li><a class="icon solid fa-sitemap" href="Project_2.pdf"><span>Classification and Prediction</span></a></li>
 								</ul>
 							</nav>
 
@@ -45,7 +45,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="Kaitlyn-Rouse-Headshot copy.jpg" alt="" /></a>
 										<header>
 											<h3>Awesome Viz 1</h3>
 										</header>
