--- a/testprofileLG.github.io/index.html
+++ b/testprofileLG.github.io/index.html
@@ -45,7 +45,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="Kaitlyn-Rouse-Headshot copy.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/vis1.jpeg" alt="" /></a>
 										<header>
 											<h3>Awesome Viz 1</h3>
 										</header>
@@ -57,7 +57,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/vis2.jpeg" alt="" /></a>
 										<header>
 											<h3>Awesome Viz 2</h3>
 										</header>
@@ -69,7 +69,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/vis3.jpeg" alt="" /></a>
 										<header>
 											<h3>Awesome Viz 3</h3>
 										</header>
