--- a/testprofileLG.github.io/index.html
+++ b/testprofileLG.github.io/index.html
@@ -25,7 +25,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid fa-home" href="Kaitlyn_Rouse_Resume_1.pdf"><span>My Resume</span></a></li>
+									<li><a class="icon solid fa-home" href="Resume.pdf"><span>My Resume</span></a></li>
 									<li><a class="icon fa-chart-bar" href="Project_1.pdf"><span>Wrangling and Visualizations</span></a></li>
 									<li><a class="icon solid fa-sitemap" href="Project_2.pdf"><span>Classification and Prediction</span></a></li>
 								</ul>
